--- a/templates/admin_plane.html
+++ b/templates/admin_plane.html
@@ -64,7 +64,7 @@
             <section class="info__personal" style="display: none">
               <div class="info__name">
                 <h2 class="name__heading">Nguyen Hong Phat</h2>
-                <p class="name__desc">(Staff)</p>
+                <p class="name__desc">(Admin)</p>
                 <div class="underlined"></div>
               </div>
               <div class="user_functions">
@@ -186,19 +186,21 @@
           <!-- onclick -->
           <dialog id="dialog_add">
             <div class ="wrapper">
-              <form>
+              <form id="add_form">
                 <div class= "field_add"> 
                   <label class="label">Plane ID:</label>
                   <input required class="input" type="text" placeholder="Enter Plane ID">
                   <label class="label">Plane Name:</label>
-                  <input required id='duration_dialog' class="input" type="text" placeholder="Enter Plane Name" >
-                  <label class="label">Manufacture ID:</label>
-                  <input required id='note_dialog' class="input" type="text" placeholder="Enter Manufacture ID">
+                  <input required  class="input" type="text" placeholder="Enter Plane Name" >
+                  <label class="label">Manufacturer ID:</label>
+                  <input required  class="input" type="text" placeholder="Enter Manufacturer ID">
+                  <label class="label">Seat Quantity:</label>
+                  <input required  class="input" type="text" placeholder="Enter Seat Quantity">
                   <div class="button">
-                    <button id="confirmAdd" class="btn">Add</button>
-                    <button id="cancelAdd" class="btn">Cancel</button>
+                    <input type="submit" id="confirmAdd" class="btn" value="Confirm">
+                    <input type="button" id="cancelAdd" class="btn" value="Cancel">
                   </div>
-              </div>
+                </div>
             </form>
             </div>
           </dialog>
@@ -207,16 +209,18 @@
           <table id="table_planes" class="table">
             
               <tr>
-                <th style="width: 15%;">Airport Code</th>
-                <th style="width: 25%;">Airport Name</th>
-                <th>Address</th>
-                <th style="width: 15%;">Button</th>
+                <th style="width: 15%;">Plane ID</th>
+                <th style="width: 25%;">Plane Name</th>
+                <th style="width: 15%;">Manufacturer ID</th>
+                <th style="width: 15%;">Seat Quantity</th>
+                <th style="width: 15%;">Action</th>
               </tr>
             
               <tr>
                 <td>1</td>
                 <td>Anh</td>
                 <td>10</td>
+                <td>10</td>
                 <td><button class="btn-delete">Delete</button></td>
               </tr>
             
@@ -224,12 +228,6 @@
                 <td>2</td>
                 <td>M34</td>
                 <td>10</td>
-                <td><button class="btn-delete">Delete</button></td>
-              </tr>
-
-              <tr>
-                <td>2</td>
-                <td>M34</td>
                 <td>10</td>
                 <td><button class="btn-delete">Delete</button></td>
               </tr>
@@ -238,12 +236,6 @@
                 <td>2</td>
                 <td>M34</td>
                 <td>10</td>
-                <td><button class="btn-delete">Delete</button></td>
-              </tr>
-
-              <tr>
-                <td>2</td>
-                <td>M34</td>
                 <td>10</td>
                 <td><button class="btn-delete">Delete</button></td>
               </tr>
@@ -251,6 +243,23 @@
               <tr>
                 <td>2</td>
                 <td>M34</td>
+                <td>10</td>
+                <td>10</td>
+                <td><button class="btn-delete">Delete</button></td>
+              </tr>
+
+              <tr>
+                <td>2</td>
+                <td>M34</td>
+                <td>10</td>
+                <td>10</td>
+                <td><button class="btn-delete">Delete</button></td>
+              </tr>
+
+              <tr>
+                <td>2</td>
+                <td>M34</td>
+                <td>10</td>
                 <td>10</td>
                 <td><button class="btn-delete">Delete</button></td>
               </tr>
