--- a/templates/admin_passenger.html
+++ b/templates/admin_passenger.html
@@ -179,7 +179,7 @@
               <div class="add-booking__icon" id="btnAdd">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" viewBox="0 0 512 512" fill="#00256C">
                   <path d="M256 288A144 144 0 1 0 256 0a144 144 0 1 0 0 288zm-94.7 32C72.2 320 0 392.2 0 481.3c0 17 13.8 30.7 30.7 30.7H481.3c17 0 30.7-13.8 30.7-30.7C512 392.2 439.8 320 350.7 320H161.3z"/></svg>
-                  <a class="add__tickets" href="#">Add passenger type</a>
+                  <a class="add__tickets" href="#">Add Type</a>
               </div>
           </div>
 
@@ -210,7 +210,7 @@
                 <th style="width: 15%;">Passenger ID</th>
                 <th >Passenger Name</th>
                 <th style="width: 25%;">Passenger Price Ratio</th>
-                <th style="width: 15%;">Button</th>
+                <th style="width: 15%;">Action</th>
               </tr>
             
               <tr>
