--- a/asses/css/style_search.css
+++ b/asses/css/style_search.css
@@ -124,8 +124,8 @@ a {
 /* ===== search ===== */
 
 .search {
-  height: 100vh;
   background: var(--partners-bg);
+  padding-bottom: 70px;
 }
 
 /* ===== hero ===== */
@@ -151,8 +151,8 @@ a {
 
 .search__container {
   margin-top: 165px;
-  padding: 15px 30px 15px;
-  border-radius: 30px;
+  padding: 15px 20px 15px;
+  border-radius: 20px;
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   position: relative;
@@ -160,7 +160,6 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-
 .fromto__search,
 .calendar__search,
 .seat__search {
@@ -168,14 +167,13 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-
 .fromto__search {
   text-align: center;
 }
 .calendar__search,
 .seat__search,
 .fromto__search {
-  gap: 20px;
+  gap: 15px;
 }
 .abb-name {
   min-width: 155px;
@@ -196,7 +194,7 @@ a {
   font-weight: 400;
 }
 .btn__search {
-  width: 150px;
+  width: 140px;
   height: 70px;
   border-radius: 20px;
   background: #00256c;
@@ -208,12 +206,10 @@ a {
   font-weight: 500;
   line-height: 1.3;
 }
-
 .form-label,
 .form-input {
   display: block;
 }
-
 .form-input {
   height: 34px;
   margin-top: 10px;
@@ -231,10 +227,10 @@ a {
 
 /* ===== result ===== */
 .result {
-  margin-top: 60px;
+  margin-top: 30px;
 }
 .result__container {
-  height: 200px;
+  height: 180px;
   margin-top: 30px;
   border-radius: 30px;
 
@@ -242,15 +238,19 @@ a {
   align-items: center;
 }
 .information {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
   padding: 15px;
-  width: 550px;
-  height: 200px;
+  /* width: 550px; */
+  height: 180px;
   border-radius: 20px 0 0 20px;
   background: #fff;
   border: 1px solid #00256c;
 }
+
 /* ===== from - to ===== */
-.fromto__result,
+
 .calendar__result,
 .seat__result {
   display: flex;
@@ -280,11 +280,6 @@ a {
   font-weight: 400;
   line-height: 1.3;
 }
-.code {
-  padding-top: 22px;
-  display: flex;
-  align-items: center;
-}
 .res__dura,
 .res__details,
 .res__station,
@@ -295,15 +290,6 @@ a {
   font-size: 2rem;
   font-weight: 400;
   line-height: 1.3;
-}
-.res__code {
-  padding-left: 50px;
-}
-.res__station {
-  padding-left: 90px;
-}
-.res__details {
-  padding-left: 85px;
 }
 .btn__details {
   color: var(--header-bg);
@@ -318,40 +304,10 @@ a {
   color: var(--partners-bg);
   background: var(--header-bg);
 }
-#toList,
-#fromList {
-  text-align: start;
-}
-
-.destination-list {
-  width: 350px;
-  display: none;
-  position: absolute;
-  background-color: #fff;
-  border: 1px solid var(--header-bg);
-  border-radius: 5px;
-  padding: 10px;
-  z-index: 1;
-}
-.international__li,
-.domestic__li {
-  color: var(--header-bg);
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: 1.14;
-}
-.li {
-  padding-left: 10px;
-  margin: 5px;
-}
-.from__search:hover,
-.to__search:hover {
-  cursor: pointer;
-}
 
 /* ==== price==== */
 .price {
-  height: 200px;
+  height: 180px;
   flex: auto;
   text-align: center;
   align-items: center;
@@ -370,7 +326,7 @@ a {
   font-family: Poppins;
   font-size: 2.4rem;
   font-weight: 400;
-  line-height: 1.3;
+
 }
 .price__vnd {
   color: #00256c;
@@ -378,7 +334,7 @@ a {
   font-size: 30px;
   font-style: normal;
   font-weight: 900;
-  line-height: 1.3;
+
 }
 .price__number {
   color: #f00;
@@ -386,13 +342,12 @@ a {
   font-size: 2.6rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.3;
+
 }
 
 /* ==== itinerary ==== */
 
 .shape {
-  height: 100vh;
   padding: 0 85px 40px;
   border-radius: 20px;
   background: #fff;
@@ -402,11 +357,10 @@ a {
   padding: 40px 0 20px;
   color: var(--header-bg);
   font-family: Poppins;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 600;
   line-height: 1.3;
 }
-
 .title__destination {
   width: 1000px;
   height: 120px;
@@ -439,14 +393,11 @@ a {
 
 /* ==== content ==== */
 .content {
-  height: 90vh;
-  margin-top: 20px;
   padding: 50px 70px 50px;
-
   border-radius: 20px;
   border: 1px solid var(--header-bg);
 }
-.item {
+.item__station {
   margin-bottom: 30px;
   display: flex;
   align-items: center;
@@ -475,7 +426,6 @@ a {
   font-weight: 400;
   line-height: 1.3;
 }
-
 .itinerary {
   display: none;
   margin-top: 10px;
