--- a/templates/admin_manu.html
+++ b/templates/admin_manu.html
@@ -179,7 +179,7 @@
               <div class="add-booking__icon" id="btnAdd">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" viewBox="0 0 512 512" fill="#00256C">
                   <path d="M64 32C46.3 32 32 46.3 32 64V304v48 80c0 26.5 21.5 48 48 48H496c26.5 0 48-21.5 48-48V304 152.2c0-18.2-19.4-29.7-35.4-21.1L352 215.4V152.2c0-18.2-19.4-29.7-35.4-21.1L160 215.4V64c0-17.7-14.3-32-32-32H64z"/></svg>
-                <a class="add__tickets" href="#">Add Manufacturer</a>
+                <a class="add__tickets" href="#">Add Manu</a>
               </div>
           </div>
 
