--- a/templates/index_search.html
+++ b/templates/index_search.html
@@ -121,50 +121,29 @@
         <form th:action="@{'/' + ${role} + '/SearchFlight'}" method="POST">
           <div class="container">
             <div class="search__container">
+
               <div class="fromto__search">
-                  <div class="from__search" onclick="showDestinations('From')">
+                  <div class="from__search">
                     <div class="name">
                       <h1 class="abb-name">From</h1>
-                      <div class="form-input">
-                        <select name="maSanBayDi">
+                      <select class="form-input" name="maSanBayDi">
                           <option disabled selected>Select destination</option>
                           <option th:each="sanbay: ${sanbay}" th:value="${sanbay.maSanBay}" th:text="${sanbay.diaChi + ' (' + sanbay.maSanBay + ')'}"></option>
-                        </select>
-                      </div>
+                      </select>
                     </div>
                   </div>
   
                   <div class="search__icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 512 512" fill="#00256C">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40"  viewBox="0 0 512 512" fill="#00256C">
                     <path d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160H352c-17.7 0-32 14.3-32 32s14.3 32 32 32H463.5c0 0 0 0 0 0h.4c17.7 0 32-14.3 32-32V80c0-17.7-14.3-32-32-32s-32 14.3-32 32v35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1V432c0 17.7 14.3 32 32 32s32-14.3 32-32V396.9l17.6 17.5 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352H160c17.7 0 32-14.3 32-32s-14.3-32-32-32H48.4c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"/></svg>
                   </div>
   
-                  <div class="to__search" onclick="showDestinations('To')">
+                  <div class="to__search">
                     <h1 class="abb-name">To</h1>
-                    <p class="form-input">
-                      <select name="maSanBayDen">
+                    <select class="form-input" name="maSanBayDen">
                         <option disabled selected>Select destination</option>
                         <option th:each="sanbay: ${sanbay}" th:value="${sanbay.maSanBay}" th:text="${sanbay.diaChi + ' (' + sanbay.maSanBay + ')'}"></option>
-                      </select>
-                    </p>
-  
-                    <div id="toList" class="destination-list">
-                      <ul class="domestic">
-                        <li class="domestic__li">Domestic</li>
-                        <li class="li" onclick="selectDestination('to', 'HNA')">Ha Noi</li>
-                        <li class="li" onclick="selectDestination('to', 'VTA')">Vung Tau</li>
-                        <li class="li" onclick="selectDestination('to', 'HCM')">Ho CHi Minh</li>
-                      </ul>
-  
-                      <ul class="international">
-                        <li class="international__li">International</li>
-                        <li class="li" onclick="selectDestination('to', 'PAR')">Paris</li>
-                        <li class="li" onclick="selectDestination('to', 'TKO')">Tokyo</li>
-                        <li class="li" onclick="selectDestination('to', 'NYK')">New York</li>
-                      </ul>
-                      </ul>
-                    </div>
-  
+                    </select>
                   </div>
               </div>
   
@@ -220,168 +199,173 @@
           </div>
         </form>
 
-        <!-- result 1-->
+        <!-- result -->
         <section class="result" th:each="flightWithCTHV : ${flightWithCTHV}">
           <div class="container">
             <div class="result__container">
               <div class="information">
-                <div class="fromto__result">
-                    <div class="from__result">
-                      <!-- <h1 class="res-time"></h1> -->
-                      <p class="res-name" th:text="${flightWithCTHV.flight.maSanBayDi}"></p>
-                    </div>
 
-                    <div class="mid__res">
-                      <p class="res__dura" th:text="${flightWithCTHV.flight.thoiGianBay}"></p>
+                  <div class="from__result">
+                      <h1 class="res-time">7:30</h1>
+                      <!-- <h1 class="res-name" th:text="${flightWithCTHV.flight.maSanBayDi}"></h1> -->
+                  </div>
+
+                  <div class="mid__res">
+                      <p class="res__dura"> 1 h</p>
+                      <!-- <p class="res__dura" th:text="${flightWithCTHV.flight.thoiGianBay}"></p> -->
                       <svg xmlns="http://www.w3.org/2000/svg" width="130" height="18" viewBox="0 0 142 24" fill="none">
-                        <path d="M3 21H133L106.869 3" stroke="#00256C" stroke-width="5" stroke-linecap="round"/>
+                      <path d="M3 21H133L106.869 3" stroke="#00256C" stroke-width="5" stroke-linecap="round"/>
                       </svg>
-                    </div>
+                  </div>
     
-                    <div class="to__result">
-                      <!-- <h1 class="res-time">10:30</h1> -->
-                      <p class="res-name"th:text="${flightWithCTHV.flight.maSanBayDen}"></p>
-                    </div>
-                </div>
+                  <div class="to__result">
+                      <h1 class="res-time">10:30</h1>
+                      <!-- <p class="res-name"th:text="${flightWithCTHV.flight.maSanBayDen}"></p> -->
+                  </div>
+                
+                  <div class="res__code">050503</div>
 
-                <div class="code">
-                  <p class="res__code" th:text="${flightWithCTHV.flight.maChuyenBay}"></p>
-                  <p class="res__station" th:text="${flightWithCTHV.flight.ngayGioBay}"></p>
-                  <p class="res__details">
+                  <div class="res__station">Station: 2</div>
+                  <!-- <p class="res__code" th:text="${flightWithCTHV.flight.maChuyenBay}"></p> -->
+                  <!-- <p class="res__station" th:text="${flightWithCTHV.flight.ngayGioBay}"></p> -->
+                  <div class="res__details">
                     <button class="btn__details">Details</button>
-                  </p>
-                </div>
+                  </div>
+               
               </div>
   
               <div class="price">
-                <a th:if="${flightWithCTHV.cthangve.soGheConLai > 0}" th:href="@{'/' + ${role} + '/BookFlight/' + ${flightWithCTHV.flight.maChuyenBay} + '/' + ${flightWithCTHV.cthangve.maHangve}}">
-                  <p class="pre price__class" th:text="${flightWithCTHV.cthangve.maHangve}"></p>
-                  <p class="pre price__vnd">VND 
-                    <p th:text="${flightWithCTHV.cthangve.donGiaHV}"></p>
-                  </p>
-                  <p class="pre price__number" th:text="${flightWithCTHV.cthangve.soGheDat}/${flightWithCTHV.cthangve.soLuong}">
-                  </p>
+                <a href="index_booking.html">
+                <!-- <a th:if="${flightWithCTHV.cthangve.soGheConLai > 0}" th:href="@{'/' + ${role} + '/BookFlight/' + ${flightWithCTHV.flight.maChuyenBay} + '/' + ${flightWithCTHV.cthangve.maHangve}}"> -->
+                  
+                  <!-- <p class="pre price__class" th:text="${flightWithCTHV.cthangve.maHangve}"></p> -->
+                  <!-- <p th:text="${flightWithCTHV.cthangve.donGiaHV}"></p> -->
+                  <!-- <p class="pre price__number" th:text="${flightWithCTHV.cthangve.soGheDat}/${flightWithCTHV.cthangve.soLuong}"></p> -->
+
+                  <p class="pre price__class">Economic Class</p>
+                  <p class="pre price__vnd">VND 2.500.000</p>
+                  <p class="pre price__number">17/20</p>
                 </a>
               </div>         
             </div>
           </div>
 
+          <!-- itinerary-->
           <section class="itinerary" >
             <div class="container">
                 <div class="shape">
                     <!-- itinerary__title -->
                     <div class="title">
-                        <h1 class="title__heading">Itinerary</h1>
+                        <h1 class="title__heading">List Itinerary</h1>
                     </div>
     
                     <!-- itinerary__content -->
                     <div class="content" th:each="trunggian : ${trunggians}" th:if="${trunggian != null}">
-                        <!-- item 1 -->
-                        <div class="item station__1">
+                        <!-- item -->
+                        <div class="item__station">
                             <div class="content-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="54" viewBox="0 0 384 512" fill="#00256C">
-                                <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="54" viewBox="0 0 384 512" fill="#00256C">
+                              <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
                             </div>
                             <div class="content__information">
-                                <div class="content-top">
+                              <div class="content-top">
                                   <h2 class="content__heading" th:text="${trunggian.maSanBayTG}"></h2>
                                   <h2 class="content__heading" th:text="${trunggian.maChuyenBay}"></h2>
                                   <h2 class="content__heading" th:text="${trunggian.thoiGianDung}"></h2>
-                                </div>
-                                <p class="content__desc" th:text="${trunggian.ghiChu}"></p>
+                              </div>
+                              <div class="content__desc" th:text="${trunggian.ghiChu}"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-    
             </div>
           </section>
 
         </section>
 
-        <!-- itinerary-->
-        
-
-        <!-- result 2-->
+        <!-- result -->
         <section class="result" th:each="flightWithCTHV : ${flightWithCTHV}">
           <div class="container">
             <div class="result__container">
               <div class="information">
-                <div class="fromto__result">
-                    <div class="from__result">
-                      <!-- <h1 class="res-time"></h1> -->
-                      <p class="res-name" th:text="${flightWithCTHV.flight.maSanBayDi}"></p>
-                    </div>
 
-                    <div class="mid__res">
-                      <p class="res__dura" th:text="${flightWithCTHV.flight.thoiGianBay}"></p>
+                  <div class="from__result">
+                      <h1 class="res-time">7:30</h1>
+                      <!-- <h1 class="res-name" th:text="${flightWithCTHV.flight.maSanBayDi}"></h1> -->
+                  </div>
+
+                  <div class="mid__res">
+                      <p class="res__dura"> 1 h</p>
+                      <!-- <p class="res__dura" th:text="${flightWithCTHV.flight.thoiGianBay}"></p> -->
                       <svg xmlns="http://www.w3.org/2000/svg" width="130" height="18" viewBox="0 0 142 24" fill="none">
-                        <path d="M3 21H133L106.869 3" stroke="#00256C" stroke-width="5" stroke-linecap="round"/>
+                      <path d="M3 21H133L106.869 3" stroke="#00256C" stroke-width="5" stroke-linecap="round"/>
                       </svg>
-                    </div>
+                  </div>
     
-                    <div class="to__result">
-                      <!-- <h1 class="res-time">10:30</h1> -->
-                      <p class="res-name"th:text="${flightWithCTHV.flight.maSanBayDen}"></p>
-                    </div>
-                </div>
+                  <div class="to__result">
+                      <h1 class="res-time">10:30</h1>
+                      <!-- <p class="res-name"th:text="${flightWithCTHV.flight.maSanBayDen}"></p> -->
+                  </div>
+                
+                  <div class="res__code">050503</div>
 
-                <div class="code">
-                  <p class="res__code" th:text="${flightWithCTHV.flight.maChuyenBay}"></p>
-                  <p class="res__station" th:text="${flightWithCTHV.flight.ngayGioBay}"></p>
-                  <p class="res__details">
+                  <div class="res__station">Station: 2</div>
+                  <!-- <p class="res__code" th:text="${flightWithCTHV.flight.maChuyenBay}"></p> -->
+                  <!-- <p class="res__station" th:text="${flightWithCTHV.flight.ngayGioBay}"></p> -->
+                  <div class="res__details">
                     <button class="btn__details">Details</button>
-                  </p>
-                </div>
+                  </div>
+               
               </div>
   
               <div class="price">
-                <a th:if="${flightWithCTHV.cthangve.soGheConLai > 0}" th:href="@{'/' + ${role} + '/BookFlight/' + ${flightWithCTHV.flight.maChuyenBay} + '/' + ${flightWithCTHV.cthangve.maHangve}}">
-                  <p class="pre price__class" th:text="${flightWithCTHV.cthangve.maHangve}"></p>
-                  <p class="pre price__vnd">VND 
-                    <p th:text="${flightWithCTHV.cthangve.donGiaHV}"></p>
-                  </p>
-                  <p class="pre price__number" th:text="${flightWithCTHV.cthangve.soGheDat}/${flightWithCTHV.cthangve.soLuong}">
-                  </p>
+                <a href="index_booking.html">
+                <!-- <a th:if="${flightWithCTHV.cthangve.soGheConLai > 0}" th:href="@{'/' + ${role} + '/BookFlight/' + ${flightWithCTHV.flight.maChuyenBay} + '/' + ${flightWithCTHV.cthangve.maHangve}}"> -->
+                  
+                  <!-- <p class="pre price__class" th:text="${flightWithCTHV.cthangve.maHangve}"></p> -->
+                  <!-- <p th:text="${flightWithCTHV.cthangve.donGiaHV}"></p> -->
+                  <!-- <p class="pre price__number" th:text="${flightWithCTHV.cthangve.soGheDat}/${flightWithCTHV.cthangve.soLuong}"></p> -->
+
+                  <p class="pre price__class">Economic Class</p>
+                  <p class="pre price__vnd">VND 2.500.000</p>
+                  <p class="pre price__number">17/20</p>
                 </a>
               </div>         
             </div>
           </div>
-        
+
+          <!-- itinerary-->
           <section class="itinerary" >
             <div class="container">
                 <div class="shape">
                     <!-- itinerary__title -->
                     <div class="title">
-                        <h1 class="title__heading">Itinerary</h1>
+                        <h1 class="title__heading">List Itinerary</h1>
                     </div>
     
                     <!-- itinerary__content -->
                     <div class="content" th:each="trunggian : ${trunggians}" th:if="${trunggian != null}">
-                        <!-- item 1 -->
-                        <div class="item station__1">
+                        <!-- item -->
+                        <div class="item__station">
                             <div class="content-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="54" viewBox="0 0 384 512" fill="#00256C">
-                                <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="54" viewBox="0 0 384 512" fill="#00256C">
+                              <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
                             </div>
                             <div class="content__information">
-                                <div class="content-top">
+                              <div class="content-top">
                                   <h2 class="content__heading" th:text="${trunggian.maSanBayTG}"></h2>
                                   <h2 class="content__heading" th:text="${trunggian.maChuyenBay}"></h2>
                                   <h2 class="content__heading" th:text="${trunggian.thoiGianDung}"></h2>
-                                </div>
-                                <p class="content__desc" th:text="${trunggian.ghiChu}"></p>
+                              </div>
+                              <div class="content__desc" th:text="${trunggian.ghiChu}"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-    
             </div>
           </section>
-        
-        </section>
 
-        
+        </section>
 
       </section>
     </main>
