--- a/asses/css/style_decentralization_admin.css
+++ b/asses/css/style_decentralization_admin.css
@@ -1,16 +1,13 @@
 * {
   box-sizing: border-box;
 }
-
 html {
   font-size: 62.5%;
 }
-
 body {
   font-size: 1.6rem;
   font-family: "Sora", sans-serif;
 }
-
 :root {
   --font-heading: "Sora";
   --font-content: "Open Sans";
@@ -20,9 +17,7 @@ body {
 }
 
 /* ========== common ========== */
-
 /* se co nhung the khong an theo thuoc tinh chung */
-
 input,
 textarea,
 select,
@@ -30,36 +25,19 @@ button {
   font-family: inherit;
   font-size: inherit;
 }
-
 .container {
-  width: 1170px;
+  width: 1400px;
   margin: 0 auto;
   max-width: calc(100% - 48px);
 }
-
 a {
   text-decoration: none;
-}
-
-.btn {
-  /* box chua */
-  display: inline-block;
-  min-width: 205px;
-  line-height: 60px;
-  border-radius: 30px;
-  background: var(--primary-color);
-  /* text */
-  text-align: center;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 400;
 }
 
 .btn:hover {
   /* Lam mo nen */
   opacity: 0.9;
 }
-
 .section-heading {
   color: var(--header-bg);
   font-size: 5rem;
@@ -67,20 +45,17 @@ a {
   line-height: 1.2;
   letter-spacing: -1px;
 }
-
 .section-desc {
   color: #575f66;
   font-size: 1.8rem;
   font-weight: 300;
   line-height: 1.67;
 }
-
 .control {
   display: flex;
   column-gap: 18px;
   align-items: center;
 }
-
 .control__btn {
   width: 36px;
   height: 36px;
@@ -93,24 +68,20 @@ a {
   cursor: pointer;
   transition: 0.25s;
 }
-
 .control__btn:hover {
   background: var(--primary-color);
   border-color: var(--primary-color);
   color: #fff;
 }
-
 .control__btn--next {
   rotate: 180deg;
 }
 
 /* ========== header ========== */
-
 .header {
   background: var(--header-bg);
   min-width: 100vw;
 }
-
 .menu {
   padding: 10px;
   width: 1400px;
@@ -120,11 +91,9 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-
 .navbar__list {
   display: flex;
 }
-
 .header__action--login,
 .navbar__link {
   padding: 8px 21px;
@@ -133,7 +102,6 @@ a {
   font-weight: 300;
   line-height: 1.75;
 }
-
 .navbar__link:hover,
 .navbar__link--active {
   color: #fff;
@@ -141,60 +109,47 @@ a {
   text-shadow: 1px 0 0 currentColor;
   line-height: 1.75;
 }
-
 .header__action--signup {
   min-width: 104px;
   line-height: 44px;
   font-size: 1.6rem;
 }
-
 .header__action--login {
   margin-right: 7px;
 }
 
 /* ========== main ========== */
 
-/* ===== how  ===== */
 
-.book {
-  padding: 100px 0;
+/* ===== how  ===== */
+.book{
+  padding: 40px 0;
   background: #f6fbff;
 }
-
-.book__desc {
-  padding-top: 18px;
-  width: 40%;
+.book__heading {
+  text-align: center;
 }
-
 .book__list {
-  margin-top: 86px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   column-gap: 30px;
   align-items: center;
   justify-content: space-between;
 }
-
 .book-item {
-  padding: 40px;
+  text-align: center;
+  padding: 20px;
   border: 16px solid #eaf6ff;
   border-radius: 4px;
   background: #fff;
   /* hieu ung */
   transition: 0.25s;
 }
-
-.book-item__active {
+.book-item:hover {
   border-color: var(--primary-color);
   transition: 0.25s;
   transform: translateY(-16px);
 }
-
-.book-tiem__icon {
-  width: 72px;
-  height: 72px;
-}
-
 .book-item__heading {
   margin-top: 18px;
   color: #10375c;
@@ -203,95 +158,70 @@ a {
   line-height: 1.39;
 }
 
-.book-item__desc {
-  min-height: 120px;
-  margin-top: 28px;
-  color: #575f66;
-  font-size: 1.6rem;
-  font-weight: 300;
-  line-height: 1.75;
+/* title */
+.planes{
+  padding-bottom: 70px;
 }
-
-.book-item__link {
-  margin: 18px 0 auto;
-  display: inline-block;
-  color: #2e80ce;
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 1.75;
-}
-
-/* bat dau chinh sua tu day*/
-
-/* Dinh dang cho thanh tim kiem*/
-
-.btn_bar {
-  background-color: #00256c;
-  width: calc(100% / 6 - 50px);
-  height: 50px;
-  color: #fff;
-  border-radius: 10px;
-  border-color: #00256c;
-}
-
-.btn_bar:hover {
-  /* Lam mo nen */
-  opacity: 0.9;
-}
-
-.btn_bar:active {
-  /* Lam mo nen */
-  background-color: #f7f7f7;
-  color: #00256c;
-}
-
-.input {
-  margin: 10px;
-  padding: 10px;
-  width: 400px;
-  height: 50px;
-  border-radius: 10px;
-  color: #00256c;
-  border-color: #00256c;
-}
-
-.container_bar {
-  margin: 20px 0 auto;
+.add-booking {
+  margin: 0 30px;
+  padding-top: 60px;
+  width: 92%;
   display: flex;
-  padding: 20px;
   align-items: center;
   justify-content: space-between;
-}
-.search {
-  padding-left: 20px;
-  display: flex;
-  align-items: center;
-}
 
+}
+.add-booking__icon {
+  
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  gap: 10px;
+}
+.add-booking:hover .add-booking__icon {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.add__tickets {
+  color: var(--header-bg);
+}
+.btn-delete{
+  width: 70px;
+  height: 30px;
+  background-color: red;
+  border: transparent;
+  border-radius: 10px;
+  color: #fff;
+}
+.btn-delete:hover {
+  opacity: 0.9;
+  cursor: pointer;
+  background-color: var(--header-bg);
+}
+.btn-delete:active {
+  background-color: #fff;
+  color: #00256c;
+}
 h1 {
-  padding: 30px;
   color: #00256c;
   font-size: 45px;
   font-weight: bold;
 }
-.decentralization_heading {
-  margin-top: 60px;
-  text-align: center;
-}
 
-/* dinh dang table va cac thanh phan ben trong*/
 
+/* table */
 table {
   margin-left: 30px;
   margin-top: 40px;
   width: 96%;
 }
-
 th {
+  height: 50px;
   background-color: #a0d1ff;
-  font-size: 18px;
+  font-size: 2.2rem;
+  color: #fff;
+  font-weight: 500;
 }
-
 table,
 th,
 td {
@@ -299,73 +229,64 @@ td {
   border-collapse: collapse;
   text-align: center;
 }
-
 th,
 td {
-  padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
+  padding:10px;
 }
-
 tr:hover {
   background-color: rgb(193, 231, 234);
 }
 
-/* dinh dang cho thanh phan dialog va bieu mau ben trong*/
-
+/* onClick */
 dialog {
+  width: 40%;
   border-radius: 10px;
   border-color: transparent;
 }
-
 dialog .wrapper {
-  padding: 16px;
+  padding: 10px;
 }
-
-.field_add_station {
+.field_add {
   display: grid;
   align-items: center;
   align-content: center;
-  grid-template-columns: 1fr 1fr;
+  gap: 15px;
 }
-
-.label_station {
-  padding: 0 20px;
+.label {
+  padding: 0 15px;
+  color: #00256c;
 }
-
-.input_station {
-  outline: none;
-  font-size: 14px;
-  color: #333;
+.input {
+  color: black;
   border-radius: 5px;
   border: 1px solid #00256c;
-  padding: 0 15px;
-  height: 42px;
-  margin: 8px 0;
+  padding: 0 10px;
+  margin: 0 15px;
+  height: 40px;
 }
-
-.btn_station {
+.btn {
+  width: 200px;
   background-color: #00256c;
   color: #fff;
-  margin: 10px;
+  margin: 0 15px;
   height: 40px;
-  border-radius: 50px;
+  border-radius: 10px;
+  justify-self: center;
 }
-
-.btn_station:hover {
+.btn:hover {
   opacity: 0.9;
   cursor: pointer;
   background-color: var(--header-bg);
 }
-
-.btn_station:active {
+.btn:active {
   background-color: #fff;
   color: #00256c;
 }
-
-.table_title {
-  text-decoration-thickness: 3px;
+.button{
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 /* test */
@@ -406,7 +327,6 @@ dialog .wrapper {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-
 .name__heading {
   margin-top: 10px;
   color: #00256c;
@@ -426,7 +346,6 @@ dialog .wrapper {
   height: 1px;
   background: #d9d9d9;
 }
-
 .name__id,
 .name__functions {
   color: #00256c;
@@ -434,7 +353,6 @@ dialog .wrapper {
   font-weight: 600;
   line-height: 1.3;
 }
-
 .personal__page,
 .booked__tickets,
 .log_out {
@@ -453,3 +371,5 @@ dialog .wrapper {
   border-radius: 10px;
   background: #d9d9d9;
 }
+
+
