--- a/asses/css/style_search.css
+++ b/asses/css/style_search.css
@@ -240,13 +240,14 @@ a {
 .information {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
+  place-items: center;
   padding: 15px;
   /* width: 550px; */
   height: 180px;
   border-radius: 20px 0 0 20px;
   background: #fff;
   border: 1px solid #00256c;
+
 }
 
 /* ===== from - to ===== */
