--- a/templates/index_reservation_staff.html
+++ b/templates/index_reservation_staff.html
@@ -44,21 +44,21 @@
                 <a href="/templates/index_reservation_staff.html" class="navbar__link navbar__link--active">Reservation</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index_search_staff.html" class="navbar__link">Flight</a>
+                <a href="/templates/staff_search_flight.html" class="navbar__link">Search Flight</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index_adding_staff.html" class="navbar__link">Add Flight</a>
+                <a href="/templates/staff_search_ticket.html" class="navbar__link">Search Ticket</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index_report_staff.html" class="navbar__link">Report</a>
+                <a href="/templates/staff_booked.html" class="navbar__link">Booked Ticket</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index_regulations_staff.html" class="navbar__link">Regulations</a>
+                <a href="/templates/staff_report.html" class="navbar__link">Report</a>
               </li>
             </ul>
           </nav>
-          <!-- cta action -->
-          <!-- cta action -->
+          
+        <!-- cta action -->
         <div class="congratulation__action">
           <svg
             xmlns="http://www.w3.org/2000/svg"
