--- a/templates/staff_search_flight.html
+++ b/templates/staff_search_flight.html
@@ -44,35 +44,19 @@
         <nav class="navbar">
           <ul class="navbar__list" id="navbar__list--pc">
             <li class="navbar__item">
-              <a
-                href="/templates/index_reservation_staff.html"
-                class="navbar__link"
-                >Reservation</a
-              >
+              <a href="/templates/index_reservation_staff.html" class="navbar__link">Reservation</a>
             </li>
             <li class="navbar__item">
-              <a
-                href="/templates/index_search_staff.html"
-                class="navbar__link navbar__link--active"
-                >Flight</a
-              >
+              <a href="/templates/staff_search_flight.html" class="navbar__link navbar__link--active">Search Flight</a>
             </li>
             <li class="navbar__item">
-              <a href="/templates/index_adding_staff.html" class="navbar__link"
-                >Add Flight</a
-              >
+              <a href="/templates/staff_search_ticket.html" class="navbar__link">Search Ticket</a>
             </li>
             <li class="navbar__item">
-              <a href="/templates/index_report_staff.html" class="navbar__link"
-                >Report</a
-              >
+              <a href="/templates/staff_booked.html" class="navbar__link">Booked Ticket</a>
             </li>
             <li class="navbar__item">
-              <a
-                href="/templates/index_regulations_staff.html"
-                class="navbar__link"
-                >Regulations</a
-              >
+              <a href="/templates/staff_report.html" class="navbar__link">Report</a>
             </li>
           </ul>
         </nav>
