--- a/templates/index_decentralization_admin.html
+++ b/templates/index_decentralization_admin.html
@@ -201,7 +201,7 @@
 
             <tr>
               <td>1</td>
-              <td>Anh</td>
+              <td>$2a$10$AvHuhg4AQ0gdBkV6f2reKOZ5DaWpLaTGhGA/mbuN6n6iT3jfjbFX.</td>
               <td>10</td>
               <td>10</td>
               <td>10</td>
@@ -210,7 +210,7 @@
 
             <tr>
               <td>2</td>
-              <td>M34</td>
+              <td>$2a$10$AvHuhg4AQ0gdBkV6f2reKOZ5DaWpLaTGhGA/mbuN6n6iT3jfjbFX.</td>
               <td>10</td>
               <td>10</td>
               <td>10</td>
