--- a/asses/css/style_report_staff.css
+++ b/asses/css/style_report_staff.css
@@ -182,6 +182,7 @@ a {
 }
 
 /* container_left */
+
 .container_left{
   width: 400px;
   display: flex;
@@ -238,6 +239,7 @@ a {
 
 table{
   width: 100%;
+  margin-bottom: 50px;
 }
 
 
