--- a/templates/index_report.html
+++ b/templates/index_report.html
@@ -103,62 +103,38 @@
             <div class="container_report">
               <!-- search -->
               <div class="container_left">
-                <div class="report_types">
-                  <button id="btn_yearlyReport" class="btn_bar">Yearly report</button>
-                  <button id="btn_monthlyReport" class="btn_bar">Monthly report</button>
-                </div>
+                <form th:action="@{/{role}/BCDT_Thang(role=${role})}" method="POST"></form>
+                  <div class="report_types">
+                    <button id="btn_yearlyReport" class="btn_bar">Yearly report</button>
+                    <button id="btn_monthlyReport" class="btn_bar">Monthly report</button>
+                  </div>
+                
+                  <!-- style="search_yearly" -->
+                  <div id="search_yearly" name="year" class="search_yearly">
+                    <input class="input" type="number" placeholder="Select year" />
+                  </div>
 
-                <!-- style="search_yearly" -->
-                <div id="search_yearly" class="search_yearly">
-                  <input class="input" type="number" placeholder="Select year" />
-                </div>
-
-                <!-- style="search_monthly" -->
-                <div id="search_monthly" class="search_monthly" style="display: none;">
-                  <input class="input" type="number" placeholder="Select year" />
-                  <input class="input" type="number" placeholder="Select month" />
-                </div>
-            
-                <div class="preparation">
-                  <button id="btnSearch" class="btn_bar">Report preparation</button>
-                </div>
+                  <!-- style="search_monthly" -->
+                  <div id="search_monthly" name="month" class="search_monthly" style="display: none;">
+                    <input class="input" type="number" placeholder="Select year" />
+                    <input class="input" type="number" placeholder="Select month" />
+                  </div>
+              
+                  <div class="preparation">
+                    <button id="btnSearch" class="btn_bar">Report preparation</button>
+                  </div>
+                </form>
               </div>
+              <!-- <form th:action="@{/{role}/BCDT_Thang(role=${role})}" method="POST">
+                  
+                  <input type="number" name="month" placeholder="Enter month" value="0"/><br>
+                  
+                  <input type="number" name="year" placeholder="Enter year" required /><br>
+                  <input type="submit" value="Generate Report" />
+              </form><br> -->
     
               <!-- table -->
               <div class="container_right">
-                <!-- table for yearly report -->
-                <table id="table_yearly" class="table">
-    
-                  <!-- title -->
-                  <div class="table_title">
-                    <tr>
-                      <th>Month</th>
-                      <th>Number of flights</th>
-                      <th>Total Revenue</th>
-                      <th>Rate</th>
-                    </tr>
-                  </div>
-                  
-                  <!-- result 1 -->
-                  <div class="table_row">
-                    <tr>
-                      <td>11</td>
-                      <td>2</td>
-                      <td>160000</td>
-                      <td>30,146514618</td>
-                    </tr>
-                  </div>
-      
-                  <!-- result 2 -->
-                  <div class="table_row">
-                    <tr>
-                      <td>12</td>
-                      <td>3</td>
-                      <td>190000</td>
-                      <td>30,146514618</td>
-                    </tr>
-                  </div>
-                </table>
 
                 <!-- table for monthly report -->
                 <table id="table_monthly" class="table" style="display: none;">
@@ -166,6 +142,8 @@
                   <!-- Title for yearly report -->
                   <div class="table_title">
                     <tr>
+                      <th>Month</th>
+                      <th>Year</th>
                       <th>Flight Code</th>
                       <th>1st class ticket</th>
                       <th>2nd class ticket</th>
@@ -177,6 +155,8 @@
                   <!-- result 1 -->
                   <div class="table_row">
                     <tr>
+                      <td>11</td>
+                      <td>2024</td>
                       <td>MH37</td>
                       <td>20</td>
                       <td>50</td>
@@ -185,18 +165,59 @@
                     </tr>
                   </div>
 
-                  <!-- result 2 -->
-                  <div class="table_row">
-                    <tr>
-                      <td>MH37</td>
-                      <td>20</td>
-                      <td>50</td>
-                      <td>1200000</td>
-                      <td>25.4</td>
-                    </tr>
-                  </div>
 
                 </table>
+                
+                <!-- table for yearly report -->
+                <table id="table_yearly" class="table" >
+    
+                  <!-- title -->
+                  <div class="table_title">
+                    <tr>
+                      <th>Month</th>
+                      <th>Year</th>
+                      <th>Number of flights</th>
+                      <th>Total Revenue</th>
+                      <th>Rate</th>
+                    </tr>
+                  </div>
+                  
+                  <!-- result 1 -->
+                  <div class="table_row">
+                    <tr>
+                      <td>11</td>
+                      <td>2024</td>
+                      <td>3</td>
+                      <td>160000</td>
+                      <td>30,146514618</td>
+                    </tr>
+                  </div>
+                </table>
+
+                <table id="table_yearly" class="table" >
+    
+                  <!-- title -->
+                  <div class="table_title">
+                    <tr>
+                      <th>Year</th>
+                      <th>Total Revenue</th>  
+                    </tr>
+                  </div>
+                  
+                  <!-- result 1 -->
+                  <div class="table_row">
+                    <tr>
+                      <td>2024</td>
+                      <td>160000</td>
+                    </tr>
+                  </div>
+                </table>
+
+                
+
+                
+
+                
 
               </div>
             </div>
