--- a/templates/index_adding_staff.html
+++ b/templates/index_adding_staff.html
@@ -118,14 +118,9 @@
     </div>
     </header>
 
-    <section class="hero">
-      <img class="hero__img" src="/asses/img/plane_0.svg" alt="Plane_0" />
-      <div class="hero__content">
-        <h1 class="hero__heading">VietHub</h1>
-        <h1 class="hero__heading">Add Flight</h1>
-      </div>
-    </section>
-
+    <div class="title_container">
+      <h1 class="title">Adding Flight</h1>
+    </div>
     <!-- main -->
     <main>
       <div class="container">
